--- a/config.toml
+++ b/config.toml
@@ -104,7 +104,7 @@ canonifyurls = true
   # If false it will flat categories.
   hierarchicalCategories = true
 
-  description = "Hugo tranquilpeak theme demo"
+  description = "Live your Life to the Fullest"
 
   # Customization
   # Define the behavior of the sidebar
