--- a/config.toml
+++ b/config.toml
@@ -1,12 +1,15 @@
 baseURL = "https://todaypurpose.com/"
 theme = "hyde"
-title = "Today purpose"
+title = "Today Purpose"
 publishDir = "docs"
 canonifyurls = true
+googleAnalytics = ""
 
 [params]
   description = "Your life, your time"
+  # themeColor = "theme-base-0d"
   themeColor = "theme-base-09"
+  layoutReverse = false
 
 [taxonomies]
   tag = "tags"
